--- a/index.html
+++ b/index.html
@@ -3,95 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games shop - A sua loja de Games</title>
+    <title>Elden Ring </title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Glory:wght@430&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
 </head>
-<body>
-    <header>
-        <div class="container">
-            <h1>Games Shop</h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#about">Sobre a loja</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contato</a>
-                    </li>
-                </ul>
-            </nav>
-    </div>
-    </header>
-    <section id="about">
-        <div class="container">
-            <img class="store-font" src="/images/loja.jpg" alt="fachada da loja">
-            <div>
-                <h2>Sobre a loja</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium iste et dolore illo facere odit maxime accusantium officiis deleniti numquam nemo nesciunt aperiam quae, illum earum obcaecati aut minus impedit!
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio unde, deleniti sit a voluptatem repellat nulla consequatur animi ullam quos autem. Velit nam corporis eveniet iusto. Voluptatem vero quam libero!
-                </p>
-                <ul class="brands-list">
-                    <li><img src="/images/nintendo.png" alt="Nitendo logo"></li>
-                    <li><img src="/images/xbox.png" alt="Xbox logo"></li>
-                    <li><img src="/images/playstation.png" alt=""></li>
-                </ul>
-            </div>
-        </div>
-    </section>
-    <section id="contact">
-        <div class="container">
-            <h2>CONTATO</h2>
-            <div class="contact-methods">
-                <div>
-                    <h3>Fale conosco</h3>
-                    <form action="">
-                        <input type="text" placeholder="Insira seu nome" required/>
-                        <input type="email" placeholder="Insira seu email" required/>
-                        <input type="tel" placeholder="Seu telefone (opcional)"/>
-                        <textarea placeholder="Sua mensagem" required></textarea>
-                        <button type="submit">Enviar</button>
+    <body>
+        <div class="background">
+            <div class="content">
+                <header class="nav">
+                    <div class="container">
+                        <nav>
+                            <ul>
+                                <li>
+                                    <a href="#history">Historia</a>
+                                </li>
+                                <li>
+                                    <a href="#ancor">Personagens</a>
+                                </li>
+                                <li>
+                                    <a href="#location">Mapa</a>
+                                </li>
+                                
+                            </ul>
+                        </nav>
                     </div>
-                <div>
-                    <h3>Nos acompanhe</h3>
-                    <ul class="social-links">
-                        <li>
-                            <a href="#" title="siga-nos no instagram">
-                                <img src="/images/instagram.png" alt="logo intagram">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" title="siga-nos no facebook">
-                                <img src="/images/facebook.png" alt="logo facebook">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" title="Visite nosso canal no youtube">
-                                <img src="/images/youtube.png" alt="logo do youtube">
-                            </a>
-                        </li>
-                    </ul>
+            </header>
+            <section id="history">
+                <h2 id="ancor">HISTORIA</h2>
+                <div class="articles">
+                    <article id="teste">
+                        <img class="pic" src="/images/marika.jpg" alt="imagem da deusa marika">
+                        <div >
+                            <h3>Marika, Radagon e a Ordem Dourada</h3>
+                            <p>
+                                esta é uma história sobre um anel; não um anel comum, um adereço,
+                                mas sim um conjunto lógico que determina as leis de funcionamento 
+                                do mundo. Um conjunto lógico que foi quebrado e jogou todos os componentes 
+                                deste conto nas mãos do caos.
+                                Elden Ring é traduzido oficialmente como “Anel Prístino”. Prístino é uma palavra
+                                tão incomum no português quanto “Elden” na língua inglesa. De acordo com o dicionário,
+                                é um adjetivo “relativo a um estado, a uma condição ou a uma época anterior; antigo”.
+                                Assim, o anel que nomeia o jogo vem de algum ponto no passado e, no momento do início 
+                                da aventura, já nem existe como um todo.
+                                O Anel Prístino é formado por “Grandes Runas”, uma forma tangível da Graça. 
+                                Ele é um item no plano físico, que pode ser quebrado, e também é uma entidade metafísica.
+                                Era através do anel que as leis gerais da realidade se faziam valer e ele era a fonte de
+                                poder da Térvore – a grande árvore dourada, iluminada pela Graça, que equilibra os 
+                                reinos das Terras Intermédias.
+                                No momento em que se passa Elden Ring, o Anel Prístino só existe em pedaços, 
+                                guardados pelos semideuses que governam as regiões das Terras Intermédias. 
+                                Esses fragmentos garantem poder absoluto para quem os segura, mas, em contrapartida, 
+                                os distorce, integrando em seu corpo e mente o caos que assola o reino.
+                            </p>
+                        </div>
+                    </article>
+                </div>  
+            </section>
+            <h2>PERSONAGENS</h2>
+            <section id="characters">
+                <div class="articles">
+                    
+                            <div class="lore">
+                                <div id="teste">
+                                    <img class="character" src="/images/maculado.jpg" alt="imagem do maculado">
+                                <h3>Maculado</h3>
+                                <p>Os Maculados foram banidos das Terras Intermédias muito 
+                                    antes dos eventos de Elden Ring, e jogamos como um dos Maculados 
+                                    que retorna atraído pela graça.
+                                </p>
+                                </div>
+                            </div>
+                        <div class="lore">
+                            <div id="teste">
+                                <img class="character" src="/images/melina.jpg" alt="imagem de melina">
+                            <h3>Melina - A donzela de dedos</h3>
+                            <p>
+                                Elas são a outra metade dos Maculados, ajudando-os em sua 
+                                jornada para se tornarem Elden Lord. Sabemos isso devido à descrição do
+                                item Fantoche Therolina da Donzela dos Dedos que diz:
+                            </p>
+                            </div>
+                        </div>
+                    <div class="lore">
+                        <div id="teste">
+                            <img class = "character" src="/images/malenia.jpg" alt="imagem da malenia">
+                            <h3>Malenia - A deusa escarlate</h3>
+                        <p> Malenia é uma semideusa e irmã gêmea de Miquella, considerada a mais poderosa dos 
+                            Empíreos. Ganhou fama por sua lendária batalha contra Radahn, na qual liberou o poder
+                            da Podridão Escarlate, reduzindo Caelid a ruínas
+                        </p>
+                        </div>
+                    </div>
                 </div>
+            </section>
+            <h2>MAPAS</h2>
+            <section id="location">
                 <div>
-                    <h3>Venha ate nós</h3>
-                    <p>
-                        Rua Typescript n° 310, Samambaia sul - DF
-                    </p>
+                    <div class="mapas">
+                        <h3>Mapa Prinncipal</h3>
+                        <img src="/images/mapa principal.jpg" alt="mapa central do jogo">
+                    </div>
+                    <div class="mapas">
+                        <h3>Mapa de Nocron</h3>
+                        <img class="mapas" src="/images/mapa secreto.jpg" alt="mapa secreto">
+                    </div>
                 </div>
+                <div id="paisagens">
+                    <img src="/images/paisagem 1.png" alt="">
+                    <img src="/images/paisagem 2.jpg" alt="">
+                    <img src="/images/paisagem 3.png" alt="">
+                    <img src="/images/paisagem 4.jpg" alt="">
+                    <img src="/images/paisagem 5.png" alt="">
+                </div>
+            </section>
+            <div class="contact-bar">
+                <a href="https://www.instagram.com" target="_blank" class="contact-link">
+                    <img class="imgContacts" src="/images/instagram.png" alt="contato instagram">
+                </a>
+                <a href="https://www.linkedin.com/in/igor-moura-34676a25b/" target="_blank" class="contact-link">
+                    <img class="imgContacts" src="/images/linkedin logo.png" alt="perfil linkedin">
+                </a>
+                <a href="https://github.com/igorquerino" target="_blank" class="contact-link">
+                    <img class="imgContacts" src="/images/github logo.png" alt="perfil github">
+                </a>
+            </div>
+                <footer>
+                    <div class=>
+                        <p>
+                        &copy; ELDEN RING - Todos os direitos reservados - 2025
+                        </p>
+                    </div>
+                </footer>
             </div>
         </div>
-    </section>
-    <footer>
-        <div class="container">
-            <p>
-                &copy; Games Shop - Todos os direitos reservados - 2025
-            </p>
-        </div>
-    </footer>
-</body>
+    </body>
 </html>
